# building-blocks

./: .gitignore  LICENSE  README.md  setup.cfg
code/: aggregate-files.py  combine_json_to_jsonl.py  combine_txt_to_jsonl.py  convert_jsonl.py  convert_txt.py  convert_txtf.py  corpus-to-json.py  extract_csv_from_jsonl.py  extract_itxt_from_jsonl.py  extract_json_from_jsonl.py  extract_txt_from_jsonl.py  flatten_corpus.py  jsonl_to_csv.py  jsonl_to_itxt.py  jsonl_to_json.py  jsonl_to_jsonl.py  jsonl_to_txt.py  merge_json_folders.py  merge_txt_folders.py  prune_jsonl.py  requirements.txt  utils.py
docs/: aggregate-files.md  combine_json_to_jsonl.md  combine_txt_to_jsonl.md  convert_jsonl.md  convert_jsonl_to_jsont.md  convert_jsont_to_jsonl.md  convert_txt.md  convert_txtf.md  corpus-to-json.md  count_ngrams.md  extract_csv_from_jsonl.md  extract_itxt_from_jsonl.md  extract_json_from_jsonl.md  extract_txt_from_jsonl.md  flatten_corpus.md  jsonl_to_csv.md  jsonl_to_itxt.md  jsonl_to_json.md  jsonl_to_txt.md  merge_json_folders.md  merge_txt_folders.md  prune_jsonl.md  references.bib  tokenize_jsonl.md
src/: combine_txt_to_jsonl.py  convert_jsonl_to_jsont.py  convert_jsont_to_jsonl.py  count_ngrams.py  extract_itxt_from_jsonl.py  extract_json_from_jsonl.py  requirements.txt  tokenize_jsonl.py  utils.py  utils_jsonl.py  utils_jsont.py
src/buildingblocks/: __main__.py
src/buildingblocks/tools/: __init__.py  combine_json_to_jsonl.py  common_types.py  convert_txt.py  count_ngrams.py  extract_csv_from_jsonl.py  utils.py  utils_jsonl.py
