[metadata]
name = buildingblocks
version = attr: buildingblocks.__init__.__version__
url = https://github.com/TextCorpusLabs/building-blocks
project_urls =
    Bug Reports = https://github.com/TextCorpusLabs/building-blocks/issues
    Source = https://github.com/TextCorpusLabs/building-blocks
author = @markanewman
author_email = github@trinetteandmark.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
license = MIT
description = Building blocks for text processing
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    jsonlines>=1.2.0,<2.0.0
    mp_boilerplate>=0.3.4,<0.4.0
    progressbar2>=3.51.4,<4.0.0
    nltk>=3.4.5,<4.0.0
    typeguard>=2.7.1,<3.0.0

python_requires = >=3.10,<4
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    buildingblocks = buildingblocks.__main__:main

[options.packages.find]
where = src
